# bachelor_radio_project

./: README.md
bachelor_radio/: CMakeLists.txt  THANKS  bachelor_radio.pro
bachelor_radio/src/: backend.pri
bachelor_radio/src/backend/: dab-constants.cpp  dab-constants.h  decoder_adapter.cpp  decoder_adapter.h  ofdm-processor.cpp  ofdm-processor.h  radio-controller.h  radio-receiver-options.h  radio-receiver.cpp  radio-receiver.h  tii-decoder.cpp  tii-decoder.h
bachelor_radio/src/gui/: android_rtl_sdr.cpp  android_rtl_sdr.h  audio_output.cpp  audio_output.h  debug_output.cpp  debug_output.h  gui.pro  gui_helper.cpp  gui_helper.h  main.cpp  radio_controller.cpp  radio_controller.h  resources.qrc  version.h
bachelor_radio/src/gui/QML/: ExpertView.qml  GeneralView.qml  InfoPage.qml  MainView.qml  RadioView.qml
bachelor_radio/src/gui/QML/components/: MessagePopup.qml  SettingSection.qml  StationDelegate.qml  ViewBaseFrame.qml  WDialog.qml  WSpectrum.qml  WSwitch.qml  WTumbler.qml
bachelor_radio/src/gui/QML/expertviews/: ImpulseResponseGraph.qml  ServiceDetails.qml
bachelor_radio/src/gui/QML/settingpages/: AirspySettings.qml  ChannelSettings.qml  ExpertSettings.qml  GlobalSettings.qml  RTLSDRSettings.qml  RTLTCPSettings.qml  RawFileSettings.qml  SoapySDRSettings.qml
bachelor_radio/src/gui/android/res/values/: strings.xml
bachelor_radio/src/gui/android/res/values-de/: strings.xml
bachelor_radio/src/gui/i18n/: pl_PL.ts
bachelor_radio/src/input/: airspy_sdr.cpp  airspy_sdr.h  input_factory.cpp  input_factory.h  limesdr.cpp  limesdr.h  null_device.cpp  null_device.h  raw_file.cpp  raw_file.h  rtl_sdr.cpp  rtl_sdr.h  rtl_tcp.cpp  rtl_tcp.h  soapy_sdr.cpp  soapy_sdr.h  virtual_input.h
bachelor_radio/src/various/: MathHelper.h  Socket.cpp  Socket.h  channels.cpp  channels.h  profiling.cpp  profiling.h
